config pergem size