@@ -34,7 +34,7 @@ source ${dir}/find-hive-dependency.sh
 export HBASE_CLASSPATH_PREFIX=${tomcat_root}/bin/bootstrap.jar:${tomcat_root}/bin/tomcat-juli.jar:${tomcat_root}/lib/*:$HBASE_CLASSPATH_PREFIX
 export HBASE_CLASSPATH=$hive_dependency:${HBASE_CLASSPATH}
 
-hbase -Djava.util.logging.config.file=${tomcat_root}/conf/logging.properties \
+hbase -XX:PermSize=256M -XX:MaxPermSize=512M -Djava.util.logging.config.file=${tomcat_root}/conf/logging.properties \
 -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager \
 -Dorg.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true \
 -Dorg.apache.catalina.connector.CoyoteAdapter.ALLOW_BACKSLASH=true \
